# CorrSynth

./: README.md  pyproject.toml
src/stelar_synth_corr_data/: generate_synthetic_data.py  stelar.py
tests/: test2.py
